Added Another h3 tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <h1>This is testing</h1>
 <h2>This is Working Just Fine</h2>
 <h3>Yes its working</h3>
+<h3>Now we can collaborate and work together</h3>
