I have added h3 tag to app.componnent.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <h2>This is Working Just Fine</h2>
 <h3>Yes its working</h3>
 <h3>Now we can collaborate and work together</h3>
+<h3>Hello Myself</h3>
+<h3>VJTI</h3>
