Created a navbar in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
 <app-main></app-main>
-<h1>This is testing</h1>
-<h2>This is Working Just Fine</h2>
-<h3>Yes its working</h3>
-<h3>Now we can collaborate and work together</h3>
-<<<<<<< Updated upstream
-<h3>Hello Myself</h3>
-<h3>VJTI</h3>
-=======
-<h3>Hello Myself manali</h3>
->>>>>>> Stashed changes
+<nav></nav>
