--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mihir Task Management Board</title>
-    <link rel="stylesheet" href="FirstPage1.CSS">
+    <link rel="stylesheet" href="app.component.css">
 
 </head>
 <body>
